# gtk4-settings-library

./: README.md  meson.build
data/: io.github.trbjo.bob.settings.gresource.xml  settings.css
src/: breadcrumbs.vala  schema-parser.vala  settings-widget-factory.vala  settings-window.vala  string-array-widget.vala  utils.vala
